fixed alignment

--- a/mpls-ethics/static/css/certificate.css
+++ b/mpls-ethics/static/css/certificate.css
@@ -40,9 +40,13 @@ div#certificate {
 div#learner_name {
     text-align: center;
     font-size: 24pt;
+    height: 60px;
+    line-height:40px;
 }
 
 div#complete_date {
     text-align: center;
     font-size: 16pt;
+    height: 60px;
+    line-height:40px;
 }
